Update bootstrap policy

--- a/test/testdata/bootstrappolicy/bootstrap_cluster_roles.yaml
+++ b/test/testdata/bootstrappolicy/bootstrap_cluster_roles.yaml
@@ -85,6 +85,8 @@ items:
     resources:
     - petsets
     - petsets/status
+    - statefulsets
+    - statefulsets/status
     verbs:
     - get
     - list
@@ -103,6 +105,8 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs
+    - cronjobs/status
     - jobs
     - jobs/status
     - scheduledjobs
@@ -559,6 +563,7 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs
     - jobs
     - scheduledjobs
     verbs:
@@ -605,6 +610,7 @@ items:
     attributeRestrictions: null
     resources:
     - petsets
+    - statefulsets
     verbs:
     - create
     - delete
@@ -962,6 +968,7 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs
     - jobs
     - scheduledjobs
     verbs:
@@ -1008,6 +1015,7 @@ items:
     attributeRestrictions: null
     resources:
     - petsets
+    - statefulsets
     verbs:
     - create
     - delete
@@ -1266,6 +1274,7 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs
     - jobs
     - scheduledjobs
     verbs:
@@ -1300,6 +1309,7 @@ items:
     attributeRestrictions: null
     resources:
     - petsets
+    - statefulsets
     verbs:
     - get
     - list
@@ -2797,6 +2807,7 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs
     - jobs
     - scheduledjobs
     verbs:
@@ -2808,6 +2819,7 @@ items:
     - batch
     attributeRestrictions: null
     resources:
+    - cronjobs/status
     - jobs/status
     - scheduledjobs/status
     verbs:
