--- a/test/testdata/app-scenarios/docker-compose/complex/docker-compose.imported.yaml
+++ b/test/testdata/app-scenarios/docker-compose/complex/docker-compose.imported.yaml
@@ -164,7 +164,13 @@ items:
           kind: ImageStreamTag
           name: db:latest
       type: ImageChange
-  status: {}
+  status:
+    availableReplicas: 0
+    latestVersion: 0
+    observedGeneration: 0
+    replicas: 0
+    unavailableReplicas: 0
+    updatedReplicas: 0
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -231,7 +237,13 @@ items:
           kind: ImageStreamTag
           name: web:latest
       type: ImageChange
-  status: {}
+  status:
+    availableReplicas: 0
+    latestVersion: 0
+    observedGeneration: 0
+    replicas: 0
+    unavailableReplicas: 0
+    updatedReplicas: 0
 - apiVersion: v1
   kind: ImageStream
   metadata:
@@ -281,7 +293,13 @@ items:
           kind: ImageStreamTag
           name: no-ports:latest
       type: ImageChange
-  status: {}
+  status:
+    availableReplicas: 0
+    latestVersion: 0
+    observedGeneration: 0
+    replicas: 0
+    unavailableReplicas: 0
+    updatedReplicas: 0
 - apiVersion: v1
   kind: Service
   metadata:
