--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - make install-travis
 
 script:
-  - PROTO_OPTIONAL=1 PERMISSIVE_GO=y make verify
+  - PROTO_OPTIONAL=1 make verify
   - make verify-commits
 
 notifications:
