--- a/test/testdata/app-scenarios/docker-compose/complex/docker-compose.imported.yaml
+++ b/test/testdata/app-scenarios/docker-compose/complex/docker-compose.imported.yaml
@@ -15,6 +15,8 @@ items:
       generation: null
       importPolicy: {}
       name: from
+      referencePolicy:
+        type: ""
   status:
     dockerImageRepository: ""
 - apiVersion: v1
@@ -70,6 +72,8 @@ items:
       generation: null
       importPolicy: {}
       name: from
+      referencePolicy:
+        type: ""
   status:
     dockerImageRepository: ""
 - apiVersion: v1
@@ -125,6 +129,8 @@ items:
       generation: null
       importPolicy: {}
       name: latest
+      referencePolicy:
+        type: ""
   status:
     dockerImageRepository: ""
 - apiVersion: v1
@@ -259,6 +265,8 @@ items:
       generation: null
       importPolicy: {}
       name: latest
+      referencePolicy:
+        type: ""
   status:
     dockerImageRepository: ""
 - apiVersion: v1
