--- a/test/testdata/bootstrappolicy/bootstrap_cluster_roles.yaml
+++ b/test/testdata/bootstrappolicy/bootstrap_cluster_roles.yaml
@@ -34,6 +34,7 @@ items:
     name: sudoer
   rules:
   - apiGroups:
+    - user.openshift.io
     - ""
     attributeRestrictions: null
     resourceNames:
@@ -180,6 +181,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -197,6 +199,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -210,6 +213,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -222,6 +226,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -236,6 +241,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -243,6 +249,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - oauth.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -252,6 +259,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -262,6 +270,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - quota.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -273,6 +282,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -283,6 +293,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - network.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -295,6 +306,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - template.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -306,6 +318,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - user.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -318,6 +331,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -337,6 +351,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - security.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -369,6 +384,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -412,6 +428,7 @@ items:
     name: system:build-strategy-docker
   rules:
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -427,6 +444,7 @@ items:
     name: system:build-strategy-custom
   rules:
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -442,6 +460,7 @@ items:
     name: system:build-strategy-source
   rules:
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -457,6 +476,7 @@ items:
     name: system:build-strategy-jenkinspipeline
   rules:
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -656,6 +676,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -671,6 +692,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -680,6 +702,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - security.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -689,6 +712,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -700,6 +724,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -716,6 +741,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -725,6 +751,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -743,6 +770,7 @@ items:
     - edit
     - view
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -759,6 +787,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -768,6 +797,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -778,6 +808,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -796,6 +827,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -805,6 +837,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -813,6 +846,7 @@ items:
     - get
     - update
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -820,6 +854,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -830,6 +865,7 @@ items:
     - patch
     - update
   - apiGroups:
+    - quota.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -839,6 +875,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -853,6 +890,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -862,6 +900,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -869,6 +908,7 @@ items:
     verbs:
     - update
   - apiGroups:
+    - template.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -885,6 +925,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -908,6 +949,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1064,6 +1106,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1080,6 +1123,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1089,6 +1133,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1106,6 +1151,7 @@ items:
     - edit
     - view
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1122,6 +1168,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1131,6 +1178,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1141,6 +1189,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1159,6 +1208,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1168,6 +1218,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1176,6 +1227,7 @@ items:
     - get
     - update
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1183,6 +1235,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1190,6 +1243,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - quota.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1199,6 +1253,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1213,6 +1268,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1222,6 +1278,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - template.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1238,6 +1295,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1355,6 +1413,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1366,6 +1425,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1382,6 +1442,7 @@ items:
     verbs:
     - view
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1392,6 +1453,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1402,6 +1464,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1414,6 +1477,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1423,6 +1487,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1430,6 +1495,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - quota.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1439,6 +1505,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1448,6 +1515,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1457,6 +1525,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - template.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1468,6 +1537,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1494,6 +1564,7 @@ items:
     name: basic-user
   rules:
   - apiGroups:
+    - user.openshift.io
     - ""
     attributeRestrictions: null
     resourceNames:
@@ -1503,6 +1574,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1510,6 +1582,7 @@ items:
     verbs:
     - list
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1525,6 +1598,7 @@ items:
     verbs:
     - list
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1533,6 +1607,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1540,9 +1615,10 @@ items:
     verbs:
     - create
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions:
-      apiVersion: v1
+      apiVersion: authorization.openshift.io/v1
       kind: IsPersonalSubjectAccessReview
     resources:
     - localsubjectaccessreviews
@@ -1558,6 +1634,7 @@ items:
     name: self-access-reviewer
   rules:
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1565,9 +1642,10 @@ items:
     verbs:
     - create
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions:
-      apiVersion: v1
+      apiVersion: authorization.openshift.io/v1
       kind: IsPersonalSubjectAccessReview
     resources:
     - localsubjectaccessreviews
@@ -1584,6 +1662,7 @@ items:
     name: self-provisioner
   rules:
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1636,6 +1715,7 @@ items:
     name: system:image-auditor
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1655,6 +1735,7 @@ items:
     name: system:image-puller
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1671,6 +1752,7 @@ items:
     name: system:image-pusher
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1688,6 +1770,7 @@ items:
     name: system:image-builder
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1696,6 +1779,7 @@ items:
     - get
     - update
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1703,6 +1787,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1710,6 +1795,7 @@ items:
     verbs:
     - update
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1741,6 +1827,7 @@ items:
     verbs:
     - list
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1750,6 +1837,7 @@ items:
     - get
     - list
   - apiGroups:
+    - apps.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1758,6 +1846,7 @@ items:
     - get
     - list
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1765,6 +1854,7 @@ items:
     verbs:
     - delete
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1774,6 +1864,7 @@ items:
     - get
     - list
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1789,6 +1880,7 @@ items:
     name: system:image-signer
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1797,6 +1889,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1849,6 +1942,7 @@ items:
     - create
     - list
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1886,6 +1980,7 @@ items:
     name: system:oauth-token-deleter
   rules:
   - apiGroups:
+    - oauth.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1918,6 +2013,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1926,6 +2022,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - route.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1949,6 +2046,7 @@ items:
     verbs:
     - list
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1958,6 +2056,7 @@ items:
     - delete
     - get
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1966,6 +2065,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -1975,6 +2075,7 @@ items:
     - get
     - update
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2082,6 +2183,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2189,6 +2291,7 @@ items:
     name: system:sdn-reader
   rules:
   - apiGroups:
+    - network.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2219,6 +2322,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - network.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2234,6 +2338,7 @@ items:
     name: system:sdn-manager
   rules:
   - apiGroups:
+    - network.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2246,6 +2351,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - network.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2271,6 +2377,7 @@ items:
     name: system:webhook
   rules:
   - apiGroups:
+    - build.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2330,6 +2437,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2348,6 +2456,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2355,6 +2464,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2363,6 +2473,7 @@ items:
     - get
     - update
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2378,6 +2489,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2387,6 +2499,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2404,6 +2517,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2412,6 +2526,7 @@ items:
     - delete
     - get
   - apiGroups:
+    - authorization.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2443,6 +2558,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2461,6 +2577,7 @@ items:
     - update
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2468,6 +2585,7 @@ items:
     verbs:
     - create
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2483,6 +2601,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2498,6 +2617,7 @@ items:
     name: registry-viewer
   rules:
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2510,6 +2630,7 @@ items:
     - list
     - watch
   - apiGroups:
+    - image.openshift.io
     - ""
     attributeRestrictions: null
     resources:
@@ -2524,6 +2645,7 @@ items:
     verbs:
     - get
   - apiGroups:
+    - project.openshift.io
     - ""
     attributeRestrictions: null
     resources:
