--- a/pkg/api/graph/test/overlapping-hpas.yaml
+++ b/pkg/api/graph/test/overlapping-hpas.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: List
 items:
-- apiVersion: extensions/v1beta1
+- apiVersion: autoscaling/v1
   kind: HorizontalPodAutoscaler
   metadata:
     name: overlapping 
@@ -13,9 +13,8 @@ items:
       subresource: scale
     minReplicas: 1 
     maxReplicas: 10 
-    cpuUtilization:
-      targetPercentage: 80 
-- apiVersion: extensions/v1beta1
+    targetCPUUtilizationPercentage: 80
+- apiVersion: autoscaling/v1
   kind: HorizontalPodAutoscaler
   metadata:
     name: overlapping2 
@@ -27,9 +26,8 @@ items:
       subresource: scale
     minReplicas: 1 
     maxReplicas: 10 
-    cpuUtilization:
-      targetPercentage: 80 
-- apiVersion: extensions/v1beta1
+    targetCPUUtilizationPercentage: 80
+- apiVersion: autoscaling/v1
   kind: HorizontalPodAutoscaler
   metadata:
     name: overlapping3 
@@ -41,9 +39,8 @@ items:
       subresource: scale
     minReplicas: 1 
     maxReplicas: 10 
-    cpuUtilization:
-      targetPercentage: 80 
-- apiVersion: extensions/v1beta1
+    targetCPUUtilizationPercentage: 80
+- apiVersion: autoscaling/v1
   kind: HorizontalPodAutoscaler
   metadata:
     name: dc-autoscaler
@@ -55,9 +52,8 @@ items:
       subresource: scale
     minReplicas: 1 
     maxReplicas: 10 
-    cpuUtilization:
-      targetPercentage: 80 
-- apiVersion: extensions/v1beta1
+    targetCPUUtilizationPercentage: 80
+- apiVersion: autoscaling/v1
   kind: HorizontalPodAutoscaler
   metadata:
     name: rc-autoscaler
@@ -69,8 +65,7 @@ items:
       subresource: scale
     minReplicas: 1 
     maxReplicas: 10 
-    cpuUtilization:
-      targetPercentage: 80
+    targetCPUUtilizationPercentage: 80
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
